<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.StartRideActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="70dp"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/balance_text"
            android:textAlignment="center"
            android:textSize="24sp"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/current_balance_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/current_balance"
            android:textAlignment="center"
            android:textSize="30sp"/>

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/add_currency_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_currency_button"
        android:layout_gravity="center"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/remove_card_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_card_button"
        android:layout_gravity="center"
        android:textSize="14sp"/>

</LinearLayout>