<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.StartRideActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="70dp"/>


    <!-- Scooter Name -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/baseline_electric_bike_24"
            android:hint="@string/hint_text_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!-- Scooter Location -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

    </LinearLayout>

    <!-- Button to start a ride -->


    <Button
        android:id="@+id/scan_scooter_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:text="@string/scan_scooter_button"
        android:textSize="14sp"
        app:icon="@drawable/baseline_qr_code_scanner_24"
        app:iconGravity="textStart" />

    <Button
        android:id="@+id/start_ride_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_ride_button"
        android:layout_margin="5dp"
        android:layout_gravity="end"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/open_snackbar"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:visibility="invisible"/>


</LinearLayout>