<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.UpdateRideActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="70dp"/>

    <!-- Scooter Name -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/baseline_electric_bike_24"
            android:hint="@string/hint_text_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!-- Scooter Location -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text_location"
            app:startIconDrawable="@drawable/baseline_add_location_24"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/update_ride_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:textSize="14sp"
        android:text="@string/update_ride_button"
        />

    <Button
        android:layout_gravity="center"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:text="@string/open_snackbar"
        android:visibility="invisible"/>

</LinearLayout>