<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LocationActivity">

    <TextView
        android:id="@+id/latitude_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:text="@string/latitude_text"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/latitude_text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/longitude_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:text="@string/longitude_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/longtitude_text_field"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textAlignment="center" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/address_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:text="@string/address_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_text_field"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textAlignment="center" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>